# AndroidFreetype

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xian/freetypeDemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
com/xian/freestype/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
com/xian/freestype/1.0.0/: freestype-1.0.0-sources.jar.md5  freestype-1.0.0-sources.jar.sha1  freestype-1.0.0.aar.md5  freestype-1.0.0.pom  freestype-1.0.0.pom.md5  freestype-1.0.0.pom.sha1
com/xian/freestype/1.0.1/: freestype-1.0.1-sources.jar.md5  freestype-1.0.1-sources.jar.sha1  freestype-1.0.1-sources.jar.sha256  freestype-1.0.1-sources.jar.sha512  freestype-1.0.1.aar.md5  freestype-1.0.1.aar.sha1  freestype-1.0.1.aar.sha256  freestype-1.0.1.aar.sha512  freestype-1.0.1.pom  freestype-1.0.1.pom.md5  freestype-1.0.1.pom.sha1  freestype-1.0.1.pom.sha256  freestype-1.0.1.pom.sha512
com/xian/freetype/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/xian/freetype/1.0.0/: freetype-1.0.0.aar.sha1  freetype-1.0.0.pom  freetype-1.0.0.pom.md5  freetype-1.0.0.pom.sha1
freetype/: CMakeLists.txt  build.gradle
freetype/src/androidTest/java/com/xian/freetype/: ExampleInstrumentedTest.java
freetype/src/main/: AndroidManifest.xml
freetype/src/main/java/com/xian/freetype/bmp/: BitmapFile.java  BitmapHeader.java  BmpManager.java  ByteUtils.java  DataReader.java  DataWriter.java
freetype/src/main/java/com/xian/freetype/word/: NdkFreeType.java  WordInfo.java  WordManager.java
freetype/src/main/jni/: Android.mk  Application.mk
freetype/src/main/jni/src/: native-freetype.c
freetype/src/test/java/com/xian/freetype/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
